# QTX_Library_Management_System

phase1-sql/: ERD.drawio.xml  data.sql  extra_questions.sql  queries.sql  schema.sql
phase2-data-ingestion/data/: author.csv  books.csv  borrowing.csv  category.csv  library.csv  member.csv  review.csv
phase2-data-ingestion/library_mng_system/: README.md  pyproject.toml
phase2-data-ingestion/library_mng_system/csv_data/: libraries.csv
phase2-data-ingestion/library_mng_system/data/: author.csv  book_author.csv  book_categories.csv  books.csv  borrowing.csv  category.csv  library.csv  member.csv  members.csv  review.csv
phase2-data-ingestion/library_mng_system/openAPI/: api_client.py  api_fetcher.py  database.py  main.py  models.py  schemas.py
phase2-data-ingestion/library_mng_system/src/library_mng_system/: book.py  data_processor.py  database.py  extract_data.py  libraries.py  logs.py  main.py  models.py  schemas.py
phase3-django-api/lib_mng_sys/: main.py  pyproject.toml
phase3-django-api/lib_mng_sys/lms/: .env
phase3-django-api/lib_mng_sys/lms/lms/: settings.py  urls.py
