[project]
name = "library-mng-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "field>=0.2.0",
    "phonenumbers>=9.0.10",
    "pydantic[email]>=2.11.7",
    "pymysql>=1.1.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pydantic>=2.11.7",
    "ruff>=0.12.7",
]
